label field at StructureRow model changed from VARCHAR to TEXT type

--- a/tv_on_demand/templates/tv_on_demand/structure_form.html
+++ b/tv_on_demand/templates/tv_on_demand/structure_form.html
@@ -69,6 +69,10 @@
                             <img src="/media/style/image.png" alt="image" />
                         </li>     
                     </ul>
+                
+                    <form method="post" action="unknown">
+                        {{ row_form.as_p }}
+                    </form>
                 </div>
 
                
