Tv On Demand xml generator added

--- a/tv_on_demand/templates/tv_on_demand/structure_form.html
+++ b/tv_on_demand/templates/tv_on_demand/structure_form.html
@@ -70,7 +70,7 @@
                         </li>     
                     </ul>
                 
-                    <form method="post" action="unknown">
+                    <form method="post" action="unknown" class="invisible">
                         {{ row_form.as_p }}
                     </form>
                 </div>
