--- a/tv_on_demand/templates/tv_on_demand/structure_form.html
+++ b/tv_on_demand/templates/tv_on_demand/structure_form.html
@@ -53,26 +53,48 @@
 
         
             {% if object %}
-            <h2>{% trans 'Structure montage' %}</h2>
+            <h2>{% trans 'Structure montage' %}</h2>      
+
+
             <div id="rows-frame">
                 <div>
                     <h2>
                         <span>{% trans 'menu' %}</span>
                         <em>
-                            <a href="#" class="level-add">{% trans 'Level' %} [+]</a> / 
-                            <a href="#" class="row-add">{% trans 'Item' %} [+]</a> /
-                            <a href="#" class="level-rm">{% trans 'Level' %} [-]</a>
+                            <a href="#" class="level-add" title="adicionar nível">{% trans 'Level' %} [+]</a> / 
+                            <a href="#" class="row-add" title="adicionar item">{% trans 'Item' %} [+]</a> /
+                            <a href="#" class="level-rm" title="remover este nível">{% trans 'Level' %} [-]</a>
                         </em>
                     </h2>
+
                     <ul>
                         <li>
-                            <img src="/media/style/image.png" alt="image" />
+                            <img src="/media/style/unknown.png" alt="image" /> <br />
+                            <a href="#" class="properties">Editar</a> / 
+                            <a href="#" class="row-rm">Remover</a>
+                            <!--
+                            <form method="post" action="unknown" class="ghost">
+                                {{ row_form.as_p }}
+                            </form>
+                            -->
+                            
+                            <p class="edit ghost">
+                                <strong>Selecione um tipo de item</strong> <br />
+                                <a href="#" class="select-media">Mídia</a> <br />
+                                <a href="#" class="select-entry">Notícia</a> <br /> <br />
+
+                                <span class="ghost">
+                                    Título<br /> <input type="text" name="fake_title" /> <br />
+                                    Descrição<br /> <input type="text" name="fake_description" /> <br />
+                                    Data de início<br /> <input type="text" name="fake_date_start" /> <br />
+                                    Data de término<br /> <input type="text" name="fake_date_end" /> <br />
+                                    <input type="button" name="save" value="Salvar" class="save" /> 
+                                </span>
+                            </p>
+
                         </li>     
-                    </ul>
-                
-                    <form method="post" action="unknown" class="invisible">
-                        {{ row_form.as_p }}
-                    </form>
+                    </ul>                
+
                 </div>
 
                
