setup unicode error fixed

--- a/tv_on_demand/templates/tv_on_demand/structure_form.html
+++ b/tv_on_demand/templates/tv_on_demand/structure_form.html
@@ -69,7 +69,7 @@
 
                     <ul>
                         <li>
-                            <img src="/media/style/unknown.png" alt="image" /> <br />
+                            <a href="#" class="media-link" target="_blank"><img src="/media/style/unknown.png" alt="image" /></a> <br />
                             <a href="#" class="properties">Editar</a> / 
                             <a href="#" class="row-rm">Remover</a>
                             <!--
@@ -88,6 +88,7 @@
                                     Descrição<br /> <input type="text" name="fake_description" /> <br />
                                     Data de início<br /> <input type="text" name="fake_date_start" /> <br />
                                     Data de término<br /> <input type="text" name="fake_date_end" /> <br />
+                                    <input type="hidden" name="fake_id" />
                                     <input type="button" name="save" value="Salvar" class="save" /> 
                                 </span>
                             </p>
