form issue fixed

--- a/tv_on_demand/templates/tv_on_demand/structure_form.html
+++ b/tv_on_demand/templates/tv_on_demand/structure_form.html
@@ -59,12 +59,26 @@
             <div id="rows-frame">
                 <div>
                     <h2>
-                        <span>{% trans 'menu' %}</span>
+                        <span>Menu</span>
                         <em>
+							<a href="#" class="menu-properties" title="editar esse item">Editar</a> / 
                             <a href="#" class="level-add" title="adicionar nível">{% trans 'Level' %} [+]</a> / 
                             <a href="#" class="row-add" title="adicionar item">{% trans 'Item' %} [+]</a> /
                             <a href="#" class="level-rm" title="remover este nível">{% trans 'Level' %} [-]</a>
                         </em>
+                        
+                        <p class="ghost">
+							<a href="/admin/mediafiles/mediafile/?media_type__exact=menu" class="select-media">Selecionar um menu</a> <br /><br />
+
+							<span class="ghost">
+								Título<br /> <input type="text" name="fake_title" /> <br />
+								Descrição<br /> <input type="text" name="fake_description" /> <br />
+                                Data de início<br /> <input type="text" name="fake_date_start" /> <br />
+                                Data de término<br /> <input type="text" name="fake_date_end" /> <br />
+                                <input type="hidden" name="fake_id" />
+                                <input type="button" name="save_menu" value="Salvar" class="save" /> 
+							</span>
+                        </p>
                     </h2>
 
                     <ul>
@@ -72,15 +86,18 @@
                             <a href="#" class="media-link" target="_blank"><img src="/media/style/unknown.png" alt="image" /></a> <br />
                             <a href="#" class="properties">Editar</a> / 
                             <a href="#" class="row-rm">Remover</a>
+                            
+                            {% comment %}
                             <!--
                             <form method="post" action="unknown" class="ghost">
                                 {{ row_form.as_p }}
                             </form>
                             -->
+                            {% endcomment %}
                             
                             <p class="edit ghost">
                                 <strong>Selecione um tipo de item</strong> <br />
-                                <a href="#" class="select-media">Mídia</a> <br />
+                                <a href="/admin/mediafiles/mediafile/" class="select-media">Mídia</a> <br />
                                 <a href="#" class="select-entry">Notícia</a> <br /> <br />
 
                                 <span class="ghost">
