--- a/tv_on_demand/templates/tv_on_demand/structure_form.html
+++ b/tv_on_demand/templates/tv_on_demand/structure_form.html
@@ -75,6 +75,7 @@
 							<span class="ghost">
 								Título<br /> <input type="text" name="fake_title" /> <br />
 								Descrição<br /> <input type="text" name="fake_description" /> <br />
+								Usuários permitidos<br /> {{ row_form.users }}<br />
                                 Data de início<br /> <input type="text" name="fake_date_start" /> <br />
                                 Data de término<br /> <input type="text" name="fake_date_end" /> <br />
                                 <input type="hidden" name="fake_media_id" />
