--- a/tv_on_demand/templates/tv_on_demand/pure_main.html
+++ b/tv_on_demand/templates/tv_on_demand/pure_main.html
@@ -1,4 +1,4 @@
-    <h2 class="main-breadcrumbs">SELECIONE O CANAL DESEJADO:</h2>
+    <h2 class="main-breadcrumbs">SELECIONE O CONTEÚDO DESEJADO:</h2>
     
     <ul class="main">
         {% for row in root_rows %}
