--- a/tv_on_demand/templates/tv_on_demand/base.html
+++ b/tv_on_demand/templates/tv_on_demand/base.html
@@ -12,7 +12,7 @@
         <div id="header">
             {% block header %}
                 <h1>
-                    <img src="{{ structure.skin.logo_thumb.url }}" alt="company logo" />
+                    <img src="/media/skins/{{ structure.skin.slug }}/logo.jpg" alt="company logo" />
                 </h1>
             {% endblock %}
         </div>    
