live support added

--- a/tv_on_demand/templates/tv_on_demand/base.html
+++ b/tv_on_demand/templates/tv_on_demand/base.html
@@ -23,6 +23,7 @@
     </div>
     
     <script type="text/javascript" src="/media/js/j.js"></script>
+    <script type="text/javascript" src="/media/js/j.keynav.js"></script>
     <script type="text/javascript" src="/media/js/base.js"></script>
 </body>
 
