--- a/tv_on_demand/templates/tv_on_demand/pure_main.html
+++ b/tv_on_demand/templates/tv_on_demand/pure_main.html
@@ -8,4 +8,9 @@
                 </a>
             </li>
         {% endfor %}
+        <li class="menu">
+            <a href="{% url tod_live %}" class="keynav_btn">
+                Ao Vivo
+            </a>
+        </li>
     </ul>
