modificacoes no layout

--- a/tv_on_demand/templates/tv_on_demand/base.html
+++ b/tv_on_demand/templates/tv_on_demand/base.html
@@ -26,5 +26,7 @@
     <script type="text/javascript" src="/media/js/j.keynav.js"></script>
     <script type="text/javascript" src="/media/js/base.js"></script>
 </body>
-
+    <div class="logo">
+        <img src="/media/skins/banco-do-brasil/logos_branco.png" sytle="height: 100px;width= 200px;" />
+    </div>
 </html>
