--- a/tv_on_demand/templates/tv_on_demand/rows.html
+++ b/tv_on_demand/templates/tv_on_demand/rows.html
@@ -1,6 +1,20 @@
 {% load thumbnail %}
 <h2 class="row">{{ father_row.title }}:</h2>
-
+<span class="backmenubars">
+    <p class="back menu">
+        <a href="{% if father_row.parent %}
+                    {% url tod_children father_row.parent.pk %}
+                 {% else %}
+                    {% url tod_pure_main %}
+                 {% endif %}">
+            Voltar
+        </a>
+    </p>
+    <p class="home menu">
+        <a href="{% url tod_pure_main %}"%> Inicio </a>
+    </p>
+</span>
+<div>
 <ul class="row {{ rows.0.mediafile.media_type|default:'entry' }}">
     {% for row in rows %}
         <li class="{{ row.mediafile.media_type|default:'entry' }} menu">
@@ -23,13 +37,4 @@
         </li>
     {% endfor %}
 </ul>
-
-<p class="back menu">
-        <a href="{% if father_row.parent %}
-                    {% url tod_children father_row.parent.pk %}
-                 {% else %}
-                    {% url tod_pure_main %}
-                 {% endif %}">
-            Voltar
-        </a>
-</p>
+</div>
