--- a/tv_on_demand/templates/tv_on_demand/rows.html
+++ b/tv_on_demand/templates/tv_on_demand/rows.html
@@ -11,7 +11,7 @@
         </a>
     </p>
     <p class="home menu">
-        <a href="{% url tod_pure_main %}"%> Inicio </a>
+        <a href="{% url tod_pure_main %}"> Inicio </a>
     </p>
 </span>
 <ul class="row {{ rows.0.mediafile.media_type|default:'entry' }}">
@@ -28,8 +28,7 @@
                 {% else %}
                     {% if row.mediafile.media_type == 'video' %}
                         <a href="{% url tod_serve_video father_row.pk row.pk %}"
-                        onmouseover="this.parentNode.style.background='rgba(1,1,1,0.4)';"
-                        onmouseout="this.parentNode.style.background=''">
+                        onmouseover="lighton(this)" onmouseout="lightoff(this)">
                             {% thumbnail row.mediafile.video_image "200x140" crop='center' as thumb %}
                                 <img src="{{ thumb.url }}" alt="" />
                             {% endthumbnail %}
