--- a/tv_on_demand/templates/tv_on_demand/pure_main.html
+++ b/tv_on_demand/templates/tv_on_demand/pure_main.html
@@ -8,9 +8,12 @@
                 </a>
             </li>
         {% endfor %}
+        
+        {% comment %}
         <li class="menu">
             <a href="{% url tod_live %}" class="keynav_btn">
                 Ao Vivo
             </a>
         </li>
+        {% endcomment %}
     </ul>
