--- a/tv_on_demand/templates/tv_on_demand/base.html
+++ b/tv_on_demand/templates/tv_on_demand/base.html
@@ -22,12 +22,12 @@
         </div>
     </div>
     
+    <p class="partners-logo">
+        <img src="/media/skins/banco-do-brasil/partners_logo.png" />
+    </p>
+    
     <script type="text/javascript" src="/media/js/j.js"></script>
     <script type="text/javascript" src="/media/js/j.keynav.js"></script>
     <script type="text/javascript" src="/media/js/base.js"></script>
-
-    <div class="logo">
-        <img src="/media/skins/banco-do-brasil/logos_branco.png" sytle="height: 100px;width= 200px;" />
-    </div>
 </body>
 </html>
