--- a/tv_on_demand/templates/tv_on_demand/banco-do-brasil/rows.html
+++ b/tv_on_demand/templates/tv_on_demand/banco-do-brasil/rows.html
@@ -12,7 +12,7 @@
                         {% endif %}" class="btn">
                     
                     {% if not row.mediafile.media_type == 'video' %}
-                        <img src="{{ row.mediafile.path.url }}" alt="" /> 
+                        <img src="{{ row.mediafile.path.url }}" /> 
                         <span>{{ row.title }}</span>
                     {% else %}
                         {% thumbnail row.mediafile.video_image "170x120" crop='center' as thumb %}
@@ -23,7 +23,8 @@
                             <p class="right">
                                 <strong>{{ row.title }}</strong>
                                 <span>{{ row.description }}</span>
-                            </p>                            
+                            </p>
+                                                        
                         {% endthumbnail %}
                     {% endif %}                    
                     
