--- a/tv_on_demand/templates/tv_on_demand/base.html
+++ b/tv_on_demand/templates/tv_on_demand/base.html
@@ -4,6 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>MegaMidia Box - Mobox</title>
+    <link rel="stylesheet" type="text/css" href="/media/apps/colorbox/example1/colorbox.css">
     <link rel="stylesheet" href="/media/skins/{{ structure.skin.slug }}/base.css" type="text/css" />
 </head>
 
@@ -25,9 +26,9 @@
     <p class="partners-logo">
         <img src="/media/skins/banco-do-brasil/partners_logo.png" />
     </p>
-    
+        
     <script type="text/javascript" src="/media/js/j.js"></script>
-    <script type="text/javascript" src="/media/js/j.keynav.js"></script>
+    <script type="text/javascript" src="/media/apps/colorbox/colorbox/jquery.colorbox-min.js"></script>
     <script type="text/javascript" src="/media/js/base.js"></script>
 </body>
 </html>
