--- a/tv_on_demand/templates/tv_on_demand/banco-do-brasil/rows.html
+++ b/tv_on_demand/templates/tv_on_demand/banco-do-brasil/rows.html
@@ -23,7 +23,7 @@
                             
                             <p class="right">
                                 <strong>{{ row.title }}</strong>
-                                <span>{{ row.description }}</span>
+                                <span>{{ row.label }}</span>
                             </p>
                                                         
                         {% endthumbnail %}
