tod media added

--- a/tv_on_demand/templates/tv_on_demand/base.html
+++ b/tv_on_demand/templates/tv_on_demand/base.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>MegaMidia Box - Mobox</title>
     <link rel="stylesheet" type="text/css" href="/media/apps/colorbox/example1/colorbox.css">
-    <link rel="stylesheet" href="/media/skins/{{ structure.skin.slug }}/base.css" type="text/css" />
+    <link rel="stylesheet" href="/media/tv_on_demand/skins/{{ structure.skin.slug }}/base.css" type="text/css" />
 </head>
 
 <body>
@@ -13,7 +13,7 @@
         <div id="header">
             {% block header %}
                 <h1>
-                    <img src="/media/skins/{{ structure.skin.slug }}/logo.jpg" alt="company logo" />
+                    <img src="/media/tv_on_demand/skins/{{ structure.skin.slug }}/logo.jpg" alt="company logo" />
                 </h1>
             {% endblock %}
         </div>    
@@ -24,11 +24,11 @@
     </div>
     
     <p class="partners-logo">
-        <img src="/media/skins/banco-do-brasil/partners_logo.png" />
+        <img src="/media/tv_on_demand/skins/banco-do-brasil/partners_logo.png" />
     </p>
         
     <script type="text/javascript" src="/media/js/j.js"></script>
     <script type="text/javascript" src="/media/apps/colorbox/colorbox/jquery.colorbox-min.js"></script>
-    <script type="text/javascript" src="/media/js/base.js"></script>
+    <script type="text/javascript" src="/media/tv_on_demand/js/base.js"></script>
 </body>
 </html>
