--- a/tv_on_demand/templates/tv_on_demand/structure_form.html
+++ b/tv_on_demand/templates/tv_on_demand/structure_form.html
@@ -3,6 +3,7 @@
 
 {% block extrahead %}
     {{ block.super }}
+    <link rel="stylesheet" type="text/css" href="/media/apps/colorbox/example1/colorbox.css"> 
     <link rel="stylesheet" type="text/css" href="/media/style/tooltip.css" />
     <link rel="stylesheet" type="text/css" href="/media/style/tv_on_demand.css" />
 
@@ -11,6 +12,7 @@
     <script type="text/javascript" src="/media/js/j.bgiframe.js"></script>
     <script type="text/javascript" src="/media/js/j.dimensions.js"></script>
     <script type="text/javascript" src="/media/js/j.tooltip.js"></script>
+    <script type="text/javascript" src="/media/apps/colorbox/colorbox/jquery.colorbox-min.js"></script> 
 
     <script type="text/javascript" src="/media/js/tv_on_demand.js"></script>
 {% endblock %}
@@ -52,7 +54,13 @@
             </div>
 
             {% if object %}
-            <h2>{% trans 'Structure montage' %}</h2>
+            <h2>
+                <strong>{% trans 'Structure montage' %}</strong> 
+                <a href="{% url tod_preview object.pk %}" target="_blank" class="top">
+                    <img src="/media/style/preview_icon.png" />
+                    {% trans 'Preview' %}
+                </a>
+            </h2>
 
             <div id="rows-frame">
                 {% load_structurerows object %}
