--- a/tv_on_demand/templates/tv_on_demand/pure_main.html
+++ b/tv_on_demand/templates/tv_on_demand/pure_main.html
@@ -3,7 +3,7 @@
     <ul class="main">
         {% for row in root_rows %}
             <li class="menu">
-                <a href="{% url tod_children row.pk %}" class="keynav_btn">
+                <a href="{% url tod_children row.pk %}" class="keynav_btn{% if row.restricted %} restricted{% endif %}">
                     {{ row.title }}
                 </a>
             </li>
