--- a/tv_on_demand/templates/tv_on_demand/base.html
+++ b/tv_on_demand/templates/tv_on_demand/base.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <p id="is_preview">{{ tod_is_preview }}</p>
+
     <div id="container">
         <div id="header">
             {% block header %}
