Colocando os logos em posicao fixa no canto direito inferior

--- a/tv_on_demand/tod_skins/skins/banco-do-brasil/base.css
+++ b/tv_on_demand/tod_skins/skins/banco-do-brasil/base.css
@@ -204,6 +204,8 @@ ul#row{
     text-align: right;
     padding-top: 2%;
     float: left;
+    position: absolute;
+    bottom: 0px;
 }
 #is_preview{
     display: none;
