--- a/tv_on_demand/templates/tv_on_demand/video_list.html
+++ b/tv_on_demand/templates/tv_on_demand/video_list.html
@@ -19,7 +19,7 @@
 <h2 class="row">{{ selected_row.title }}:</h2>
 <div class="video-list">
     <embed type="application/x-vlc-plugin" id="vlc" class="video" autoplay="yes" style="width: 100%; height: 80%;"
-           loop="no" volume="100" target="{% url mediafiles_serve selected_row.mediafile.pk %}" />
+           loop="no" volume="100" target="{% url mediafiles_serve selected_row.mediafile.pk %}?user_pk={{ request.user.pk }}" />
 
 </div>
 <p>
