--- a/tv_on_demand/templates/tv_on_demand/video_list.html
+++ b/tv_on_demand/templates/tv_on_demand/video_list.html
@@ -1,28 +1,42 @@
-{% load thumbnail %}
+<html>
 
-<style>
-    body{
-        background: #000;
-        color: #fff;
-    }
-    h2{
-        font-size: 1.8em;
-        font-weight: bold;        
-    }
-    p{
-        font-size: 1.2em;
-    }
+    <head>
+    
+    <!-- you dont need to host these files -->
+    <script language="javascript" src="/media/js/j.js"></script>
+    <script language="javascript" src="/media/tod_skins/video_player/jquery-vlc.js"></script>
+    <link rel="stylesheet" type="text/css" href="/media/tod_skins/video_player/styles.css" />
+    
+    
+        <script language="javascript">
+             
+            $(document).ready(function() {                
+               
+                {% if selected_row.mediafile.path %}
+                    player = VLCobject.embedPlayer('vlc1', 1024, 768, true);
+                    player.play('{{ selected_row.mediafile.path.url }}');
+                    
+                    // faz um get para a url que incrementa os logs
+                    $.get('{% url mediafiles_serve selected_row.mediafile.pk %}?user_pk={{ request.user.pk }}')
+                {% endif %}               
 
-</style>
+                
+               });
 
+        </script>
+        <style>
+            body {
+                font-family:courier
+                background: #000;
+            }
+            
+        </style>
 
-<h2 class="row">{{ selected_row.title }}:</h2>
-<div class="video-list">
-    <embed type="application/x-vlc-plugin" id="vlc" class="video" autoplay="yes" style="width: 100%; height: 80%;"
-           loop="no" volume="100" target="{% url mediafiles_serve selected_row.mediafile.pk %}?user_pk={{ request.user.pk }}" />
+    </head>
+    <body>
 
-</div>
-<p>
-    {{ selected_row.label }}
-</p>
+        <div id='vlc1'></div>
+   
+    </body>
+</html> 
 
